--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div id="carouselExampleControls" class="carousel slide" data-interval="false">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+                      <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
                       <img class="testimonial-image"src="images/dog-img.jpg" alt="dog-profile">
                       <em>Pebbles, New York</em>
                     </div>
